# DEAPtorch

./: .gitignore  DEAPtorch.py  job.sh  logbook.pkl  main.py  main_adapted.py  read_pickle.py  requirements.txt
DEAPtorch/: README.md  pyproject.toml
DEAPtorch/deaptorch/: __init__.py  optimize.py
DEAPtorch/deaptorch/helpers/: evaluation.py  operators.py  setup.py
DEAPtorch/examples/: example_user_code_cnn_cifar10.py  example_user_code_lstm_sine.py  example_user_code_rnn_mnist.py
